# is-web-api

./: .gitignore  CMakeLists.txt  IS-config-fiware-template.yaml  IS-config-ros2-template.yaml  IS-config-template.yaml  README.md  configuration.js  fiware_configuration.js  index.js  launcher.js  logger.js  package.json  ros2_configuration.js  websocket_client.js
src/: fiware_configuration.js  logger.js  ros2_configuration.js  websocket_client.js
